--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,8 +2,5 @@ spring:
   application:
     name: standing-service
 
-  profiles:
-    active: dev
-
   config:
-    import: optional:configserver:http://config:password123@localhost:8888
+    import: optional:configserver:http://config:password123@config-server:8888
